# NekoMusicForAndroid

./: .gitignore  123.md  README.md  build.gradle.kts  gradle.properties  keystore.properties  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml  manifest_fixer.py
app/src/main/cpp/: CMakeLists.txt  DesktopLyricRenderer.cpp  LrcParser.c  VRHUDRenderer.cpp  fix_vulkan.py  overwriter.py  vulkan_patch.py
app/src/main/java/com/neko/music/: MainActivity.kt  MusicPlayerService.kt  NekoMusicApplication.kt  SplashActivity.kt  cleaner.py
app/src/main/java/com/neko/music/data/api/: FavoriteApi.kt  MusicApi.kt  PlaylistApi.kt  UserApi.kt
app/src/main/java/com/neko/music/data/cache/: MusicCacheManager.kt
app/src/main/java/com/neko/music/data/database/: PlaylistDao.kt
app/src/main/java/com/neko/music/data/manager/: AppUpdateManager.kt
app/src/main/java/com/neko/music/desktoplyric/: DesktopLyricService.kt  VRHUDLyricManager.kt  VRHUDService.kt
app/src/main/java/com/neko/music/floatwindow/: FuckChinaOSFloatService.kt
app/src/main/java/com/neko/music/service/: MusicPlayerManager.kt
app/src/main/java/com/neko/music/ui/components/: AccountGlassDialogs.kt  AppUpdateGlassDialogs.kt  BottomNavigation.kt  GlassSurface.kt  LiquidPageBackdrop.kt  LocalLiquidBackdrop.kt  NavigationGlassSlider.kt  PlaylistBottomSheet.kt
app/src/main/java/com/neko/music/ui/home/: HomeLiquidHeroOverlay.kt  HomeLiquidHeroState.kt
app/src/main/java/com/neko/music/ui/screens/: AboutScreen.kt  AccountInfoScreen.kt  ArtistDetailScreen.kt  CacheManagementScreen.kt  DailyRecommendationScreen.kt  DiscoverScreen.kt  FavoriteScreen.kt  ForgotPasswordScreen.kt  HomeScreen.kt  HomeScreen_Latest.kt  LatestScreen.kt  LoginScreen.kt  MineScreen.kt  MyPlaylistsScreen.kt  PersonalizationScreen.kt  PlayerScreen.kt  PlaylistDetailScreen.kt  PlaylistScreen.kt  RankingScreen.kt  RecentPlayScreen.kt  RegisterScreen.kt  RegisterSliderCaptchaDialog.kt  SearchResultScreen.kt  SettingsScreen.kt  UploadedMusicScreen.kt
app/src/main/java/com/neko/music/ui/theme/: Theme.kt
app/src/main/java/com/neko/music/util/: AuthErrorHandler.kt  DeepLinkHandler.kt  DesktopLyricRenderer.kt  DeviceDetector.kt  DownloadHelper.kt  HttpProtocolLog.kt  LyricScrollManager.kt  NekoOkHttp.kt  UrlConfig.kt  VRHUDRenderer.kt
app/src/main/java/com/neko/music/vr/: VRActivity.kt
app/src/main/java/com/neko/music/widget/: MusicWidgetPreviewRegistrar.kt  MusicWidgetProvider.kt
app/src/main/res/drawable/: ic_lyric_toggle.xml  ic_widget_lyric_disabled.xml  music_widget_preview_image.xml  splash_initial_background.xml  vr_hud_background.xml
app/src/main/res/layout/: desktop_lyric_layout.xml  float_window_layout.xml  music_widget_preview.xml  vr_hud_lyric_layout.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  music_widget_info.xml
backdrop-port/: build.gradle.kts
backdrop-port/src/main/java/com/kyant/backdrop/effects/: Lens.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
